--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
             
            <ul>
             <li>
-                <a href="cv.homepage.html">HOME</a>
+                <a href="index.html">HOME</a>
             </li>
             <li>
                 <a href="about.html">RESUME</a>
