--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
             
            <ul>
             <li>
-                <a href="cv.homepage.html">HOME</a>
+                <a href="index.html">HOME</a>
             </li>
             <li>
                 <a href="about.html">RESUME</a>
@@ -69,7 +69,7 @@
         </div>
         </div>
 
-        <a href="cv.homepage.html" style="margin-top: 40%; margin-left: -30%; text-decoration: none;background-color: black;color: aliceblue; padding: 20px;font-weight: 700;border-radius: 20px;">SUBMIT</a>
+        <a href="index.html" style="margin-top: 40%; margin-left: -30%; text-decoration: none;background-color: black;color: aliceblue; padding: 20px;font-weight: 700;border-radius: 20px;">SUBMIT</a>
     </div>
 
     </div>
